<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:checked="true"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_booking"
        android:checked="true"
        android:icon="@drawable/ic_booking"
        android:title="@string/nav_booking"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_inbox"
        android:checked="true"
        android:icon="@drawable/ic_inbox"
        android:title="@string/nav_inbox"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_history"
        android:checked="true"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_profile"
        android:checked="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile"
        app:showAsAction="ifRoom" />

</menu>