<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/_8dp"
    tools:context=".activity.DetailHotelActivity">



    <ImageView
        android:id="@+id/iv_detail"
        android:layout_width="@dimen/_350dp"
        android:layout_gravity="center"
        android:layout_height="@dimen/_250dp"
        android:src="@drawable/la_serve_paris" />

    <TextView
        android:id="@+id/tv_title_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/lable_name" />


    <TextView
        android:id="@+id/tv_address_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/lable_address" />

    <TextView
        android:id="@+id/tv_description_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/desc" />

</LinearLayout>