<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_view"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_100sdp"
                android:padding="@dimen/_10sdp"
                android:src="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="@dimen/_140sdp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:text="@string/title"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_address_main"
                    android:layout_width="@dimen/_140sdp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_title"
                    android:maxLines="3"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_15sdp"
                    android:text="@string/lable_address"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_10sdp" />

                <RatingBar
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:numStars="5"
                    android:rating="4.5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more" />

                <ImageView
                    android:id="@+id/iv_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_expand_more" />
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>