<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rv_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/frame1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:src="@drawable/ic_menu" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/today"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_18sdp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:src="@drawable/ic_more" />

                </LinearLayout>

            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_main"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                app:boxBackgroundColor="#ffffff"
                app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                app:boxCornerRadiusTopStart="@dimen/_8sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_search"
                    android:hint="@string/search" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.synnapps.carouselview.CarouselView
                android:id="@+id/is_main"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:layout_below="@id/search_main"
                android:layout_marginTop="@dimen/_15dp"
                app:fillColor="@android:color/white"
                app:pageColor="@android:color/transparent"
                app:radius="@dimen/_5dp"
                app:slideInterval="3000"
                app:strokeColor="@color/strokeColor"
                app:strokeWidth="@dimen/_1dp" />

            <TextView
                android:id="@+id/tv_most_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/is_main"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/most_popular"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_see_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/is_main"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:text="@string/see_all"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_most_popular"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_5dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:orientation="horizontal" />

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>